[package]
name = "asn1obj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4.0"
chrono = "^0.4.0"
bytes = "^0.5.3"
regex = "1"
num-bigint = "^0.4.3"
num-traits = "^0.2.5"
serde_json = "^1.0.42"
# asn1obj_codegen = { path = "../asn1obj_codegen" }
asn1obj_codegen = "^0.1.0"