[package]
name = "intchoiceex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1obj_codegen = {path = "../../asn1obj_codegen"}
asn1obj = { path = "../../asn1obj" }
num-bigint = "^0.4.3"
hex = "^0.4.3"
serde_json = "^1.0.42"